--- a/Sayara.csproj
+++ b/Sayara.csproj
@@ -6,4 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.122" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.122" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.122">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.122" />
+  </ItemGroup>
+
 </Project>
