--- a/Sayara.csproj
+++ b/Sayara.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.122" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.122" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.122" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.122">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
