--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SayaraDb;Trusted_Connection=true;TrustServerCertificate=true;"
   },
+  "Jwt": {
+    "Key": "ThisIsASecureKeyForSayaraApplicationDevelopmentOnly123!",
+    "Issuer": "SayaraApp",
+    "Audience": "SayaraUsers"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
