--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SayaraDb;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost;Database=SayaraDb;User=root;Password=955613101232155456Aa;"
   },
   "Jwt": {
     "Key": "ThisIsASecureKeyForSayaraApplicationDevelopmentOnly123!",
