nset chnoua zedet

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SayaraDb;User=root;Password=955613101232155456Aa;"
+    "DefaultConnection": "Data Source=Sayara.db"
   },
   "Jwt": {
     "Key": "ThisIsASecureKeyForSayaraApplicationDevelopmentOnly123!",
